example-grpc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols : "grpc,grpcs"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls: 
  - secretName: grpc-bjdazure-tech-tls
    hosts:
    - grpc.bjdazure.tech
  rules:
  - host: grpc.bjdazure.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpcbin
            port: 
              number: 9001
